# xcraft-prototype

./: CMakeLists.txt  blockdef.btd  xcraft  xcraft-struced  xcraft_client  xcraft_server
include/: xcraft_window_module.h  xgame.h
shader/: clientside.f  clientside.v
src/: blocktexturedef.c  blocktexturedef.h  bmp24.c  bmp24.h  bmpfont.c  bmpfont.h  chunkbuilder.c  chunkbuilder.h  chunklist.c  chunklist.h  clientlist.c  clientlist.h  dynamicarray.c  dynamicarray.h  game.c  game.h  generator.c  generator.h  genericlist.c  genericlist.h  globallists.c  globallists.h  lightcalc.c  lightcalc.h  main.c  netdefs.h  physics.c  physics.h  player.c  player.h  pnoise.c  pnoise.h  raycast.c  raycast.h  shader.c  shader.h  ui.c  ui.h  windowglobals.h  worlddefs.h  (+2 more)
src/Client/: client.c  netthread_cli.c  netthread_cli.h  worldthread_cli.c  worldthread_cli.h
src/Server/: netthread_srv.c  netthread_srv.h  server.c  world_srv.c  world_srv.h
src/struced/: appstate.c  appstate.h  clicktool.c  clicktool.h  main.c  octree.c  octree.h
struc/: totem.struc
